--- a/front/src/public/css/category/toplist.css
+++ b/front/src/public/css/category/toplist.css
@@ -1,7 +1,8 @@
 .top-list{
     background-color: rgb(38,38,38);
     border-radius: 1rem;
-    margin-bottom: 0.7rem;
+    margin-top : 0.3rem;
+    margin-bottom : 0.3rem;
     padding: 0.5rem 2rem;
     display: flex;
     flex-direction: row;
@@ -18,17 +19,19 @@
     margin-top: 0.1rem;
 }
 
+.top-lists-header {
+    display: flex;
+    align-items: center; /* 수직 정렬 */
+    justify-content: space-between; /* 요소들을 좌우 끝으로 배치 */
+}
+
 .top-list-title{
     width: 100%;
     cursor: pointer;
 }
 
-.top-list-NOT_STARTED{
-    background-color: transparent;
-    border: white 0.1rem solid;
-}
 
-.top-list-detail {
+.top-list-modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -45,4 +48,34 @@
     padding: 20px;
     border-radius: 5px;
     width: 300px;
+}
+
+.top-list-create-content {
+    background-color: rgb(25, 25, 25);
+    padding: 20px;
+    border-radius: 5px;
+    width: 300px;
+}
+
+.top-list-isDone, .top-lists-add {
+    background: none;       /* 배경 없애기 */
+    border: none;           /* 테두리 없애기 */
+    cursor: pointer;        /* 마우스 커서를 손 모양으로 변경 */
+    transition: all 0.3s ease-out;  /* 효과의 지속 시간과 효과 유형 지정 */
+    transform-origin: center; /* 확대/축소의 기준점을 중앙으로 설정 */
+    color: white;
+}
+
+.top-lists-add {
+    font-size: 1rem;
+}
+
+.top-list-isDone:hover {
+    color: gray;          /* 텍스트 색상을 회색으로 변경 */
+    transform: scale(1.1); /* 버튼 크기를 10% 증가 */
+}
+
+.top-lists-add:hover {
+    color: gray;          /* 텍스트 색상을 회색으로 변경 */
+    transform: scale(1.3); /* 버튼 크기를 10% 증가 */
 }
